[tool.poetry]
name = "local-ip-bookkeeper"
description = "keep track of device local ips, storing them in a gist (public) encrypted"
version = "0.2.2"
license = "MIT"

authors = []

readme = "README.md"

repository = "https://github.com/psychonaute/local-ip-bookkeeper"

keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.11"
gist-storage = { git = "https://github.com/codeCoRepo/gist-storage.git" }

[tool.poetry.group.test.dependencies]
nitpick = "^0.32"

safety = "^2.3"

pytest = "^7.1"
pytest-cov = "^4.0"
pytest-randomly = "^3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


